Docs: se documentó los archicos js y se repararon llamadas en los html

--- a/html/Adopcion.html
+++ b/html/Adopcion.html
@@ -4,7 +4,7 @@
     <head>
         <title>Agregar aviso de adopción</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
         <nav>
@@ -126,9 +126,9 @@
                 </div>
             </fieldset>
 
-            <button type="submit">Agregar este aviso de adopción</button>
+            <button type="submit" id="agregar-aviso">Agregar este aviso de adopción</button>
 
         </form>
-        <script src="region_comuna.js"></script>
+        <script src="/js/region_comuna.js"></script>
     </body>
 </html>
