--- a/html/Estadistica.html
+++ b/html/Estadistica.html
@@ -4,7 +4,7 @@
     <head>
         <title>Estadistica</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/css/style.css">
     </head>
 
 
@@ -37,10 +37,10 @@
         </div>
 
         <div class="volver-portada-container">
-            <a href="http://127.0.0.1:5500/index.html">Volver a la portada</a>
+            <a href="index.html" class="btn-volver-portada">Volver a la portada</a>
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-        <script src="Graficos.js"></script>
+        <script src="/js/Graficos.js"></script>
     </body>
 </html>
