--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>PetAdoption</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/css/style.css">
     </head>
 
 
@@ -41,7 +41,7 @@
                         <td>La Dehesa</td>
                         <td>1/Perro: Samuyedo/5 años</td>
                         <td>
-                            <img Class="pet-image1" src="Imagenes/het-hondenplein-01-de-zwitserse-wi.jpg" alt="Foto de Sam">
+                            <img Class="pet-image1" src="/Imagenes/het-hondenplein-01-de-zwitserse-wi.jpg" alt="Foto de Sam">
                             <h3>Sam</h3>
                         </td>
                     </tr>
@@ -53,7 +53,7 @@
                         <td>Lo Hermida</td>
                         <td>2/Perro: Boyero de Berna/3 años</td>
                         <td>
-                            <img Class="pet-image1" src="Imagenes/boyer_de_berna_0.jpg" alt="Foto de Brandom y Osha">
+                            <img Class="pet-image1" src="/Imagenes/boyer_de_berna_0.jpg" alt="Foto de Brandom y Osha">
                             <h3>Brandon y osha</h3>
                         </td>
                     </tr>
@@ -65,7 +65,7 @@
                         <td>Chicureo</td>
                         <td>1/Perro: husky/5 meses</td>
                         <td>
-                            <img class="pet-image1" src="Imagenes/red-siberian-husky-portrait.jpg" alt="Foto de Antupi">
+                            <img class="pet-image1" src="/Imagenes/red-siberian-husky-portrait.jpg" alt="Foto de Antupi">
                             <h3>Antupi</h3>
                         </td>
                     </tr>
@@ -77,7 +77,7 @@
                         <td>Villa Las Parcelas</td>
                         <td>1/Gato: Siames/2 años</td>
                         <td>
-                            <img Class="pet-image1" src="Imagenes/siamese-cat.jpg" alt="Foto de Felicia">
+                            <img Class="pet-image1" src="/Imagenes/siamese-cat.jpg" alt="Foto de Felicia">
                             <h3>Felicia</h3>
                         </td>
                     </tr>
@@ -89,7 +89,7 @@
                         <td>El Golf</td>
                         <td>1/Gato: Carey/2 meses</td>
                         <td>
-                            <img Class="pet-image1" src="Imagenes/tortoiseshell-sadie.jpg" alt="Foto de Jeyne">
+                            <img Class="pet-image1" src="/Imagenes/tortoiseshell-sadie.jpg" alt="Foto de Jeyne">
                             <h3>Jeyne</h3>
                         </td>
                     </tr>
@@ -99,7 +99,7 @@
 
         <div id="detalle-aviso" style="display: none;">
         </div>
-        <script src="listado.js"></script>
+        <script src="/js/Listado.js"></script>
 
     </body>
 </html>
