--- a/html/Listado.html
+++ b/html/Listado.html
@@ -3,7 +3,7 @@
     <head>
         <title>Listado de Adopción</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
         <nav>
@@ -66,7 +66,7 @@
                         <td>Providencia</td>
                         <td>El Golf</td>
                         <td>1/Gato/2 meses</td>
-                        <td>Carlos</td>
+                        <td>Javier</td>
                         <td>1</td>
                     </tr>
                 </tbody>
@@ -76,7 +76,7 @@
         <div id="detalle-aviso" style="display: none;">
             </div>
 
-        <script src="Listado.js"></script>
+        <script src="/js/Listado.js"></script>
     </body>
 </html>
     
