--- a/html/Adopcion.html
+++ b/html/Adopcion.html
@@ -4,7 +4,7 @@
     <head>
         <title>Agregar aviso de adopción</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
         <nav>
