--- a/html/Estadistica.html
+++ b/html/Estadistica.html
@@ -4,7 +4,7 @@
     <head>
         <title>Estadistica</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="../css/style.css">
     </head>
 
 
