--- a/html/Listado.html
+++ b/html/Listado.html
@@ -3,7 +3,7 @@
     <head>
         <title>Listado de Adopción</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
         <nav>
